Requirements.txt changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,14 @@ matplotlib
 seaborn
 streamlit
 plotly
+pandas
+numpy
+matplotlib
+seaborn
+scikit-learn
+xgboost
+joblib
+gdown
+scipy
+nltk
+transformers
